--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="col-sm-8">
                             <div class="col-sm-12 nopaddingleftright blog-list-item mb90">
                                 <div class="hover-effect smoothie mb40">
-                                    <img src="The Social Dilemma.png" alt="Image" class="img-responsive smoothie"></a>
+                                    <img src="The Social Dilemma.PNG" alt="Image" class="img-responsive smoothie"></a>
                                     <div class="hover-overlay smoothie text-center">
 
                                     </div>
@@ -67,7 +67,7 @@
                             </div>
                             <div class="col-sm-12 nopaddingleftright blog-list-item mb90">
                                 <div class="hover-effect smoothie mb40">
-                                    <img src="The-Great-Hack-Netflix.jpg" alt="Image" class="img-responsive smoothie"></a>
+                                    <img src="The-Great-Hack-Netflix.JPG" alt="Image" class="img-responsive smoothie"></a>
                                     <div class="hover-overlay smoothie text-center">
                                     </div>
                                     <div class="hover-caption dark-overlay smoothie text-center">
